--- a/UnitTest1/UnitTest1.vcxproj
+++ b/UnitTest1/UnitTest1.vcxproj
@@ -171,6 +171,11 @@
   <ItemGroup>
     <ClInclude Include="pch.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Lab10\Lab10.vcxproj">
+      <Project>{0fda6675-e411-4016-b333-0d83ac91e2ee}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
